# ML_Ops_part2

./: .gitignore  README.md  infer.py  pyproject.toml  test_data_infered.csv  tokenizer.json  tokenizer.json.dvc  train.py  trained_model.h5.dvc  trained_model.keras.dvc
.dvc/: config
config/: model_cofig.yaml  model_config.yaml  predict_config.yaml
configs/: model_config.yaml
data/: .gitignore  medium_data.csv.dvc  test_data.csv.dvc
lstm/: infer.py  train.py
lstm_prediction/: infer.py  train.py
model/: infer.py  train.py
models/: tokenizer.json.dvc  trained_model.h5.dvc
